--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
             <div class="display" id="display"></div>
 
+            <button id="btnBack" onclick="back()" class="btn-back"><i class="fas fa-arrow-left"></i></button>
 
         </div>
 
